--- a/app/src/main/res/layout/inventory_item_layout.xml
+++ b/app/src/main/res/layout/inventory_item_layout.xml
@@ -6,67 +6,55 @@
     android:layout_width="match_parent"
     android:layout_height="40dp"
     android:orientation="horizontal"
+    app:cardBackgroundColor="@color/cardview_light_background"
     app:cardUseCompatPadding="true"
     app:cardPreventCornerOverlap="false"
     app:cardCornerRadius="2dp"
     app:cardMaxElevation="1dp"
-    app:cardElevation="1dp" >
+    app:cardElevation="1dp">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="horizontal"
-        android:gravity="center" >
-
-        <!--me.zhanghai.android.materialprogressbar.MaterialProgressBar
-            style="@style/Widget.MaterialProgressBar.ProgressBar.Horizontal"
-            android:id="@+id/progressbar_waiting"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:visibility="gone"
-            android:indeterminate="true"
-            app:mpb_progressStyle="horizontal" /-->
+        android:gravity="end">
 
         <TextView
             android:id="@+id/barcode_text_view"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:padding="4dp"
-            android:textSize="17sp"
+            android:layout_width="160dp"
+            android:layout_height="30dp"
             android:gravity="center"
-            android:layout_weight="1" />
+            android:layout_gravity="center"
+            android:textSize="17sp"/>
 
         <View
             android:id="@+id/divider_view"
             android:layout_width="2dp"
             android:layout_height="match_parent"
-            android:layout_marginTop="4dp"
-            android:layout_marginBottom="4dp"
-            android:background="#20000000" />
+            android:layout_margin="4dp"
+            android:background="#20000000"/>
 
         <TextView
             android:id="@+id/location_text_view"
-            android:textColor="#7F000000"
-            android:layout_width="100dp"
-            android:layout_height="36dp"
-            android:paddingStart="4dp"
-            android:padding="4dp"
-            android:textSize="12sp"
+            android:textColor="#4F000000"
+            android:layout_width="110dp"
+            android:layout_height="30dp"
             android:gravity="center"
-            tools:ignore="RtlSymmetry" />
+            android:layout_gravity="center"
+            tools:ignore="RtlSymmetry"/>
 
         <ImageButton
             android:id="@+id/menu_button"
-            android:layout_width="40dp"
+            android:layout_width="36dp"
             android:layout_height="wrap_content"
             android:background="@null"
             android:src="@drawable/ic_more_vert_white_24px"
-            android:paddingStart="12dp"
+            android:paddingStart="8dp"
             android:paddingEnd="4dp"
             android:paddingTop="8dp"
             android:paddingBottom="8dp"
-            android:layout_gravity="end"
-            android:contentDescription="@string/menu_description" />
+            android:gravity="end"
+            android:contentDescription="@string/menu_description"/>
 
     </LinearLayout>
 </android.support.v7.widget.CardView>
