--- a/app/src/main/res/layout/inventory_layout.xml
+++ b/app/src/main/res/layout/inventory_layout.xml
@@ -24,7 +24,7 @@
             android:layout_width="match_parent"
             android:layout_height="4dp"
             app:mpb_useIntrinsicPadding="false"
-            app:mpb_progressStyle="horizontal" />
+            app:mpb_progressStyle="horizontal"/>
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -40,7 +40,7 @@
                 android:layout_weight="1"
                 android:gravity="end"
                 android:textColor="#FFFFFF"
-                tools:ignore="RtlSymmetry" />
+                tools:ignore="RtlSymmetry"/>
 
             <TextView
                 android:id="@+id/current_location"
@@ -67,7 +67,7 @@
                 android:layout_weight="1"
                 android:gravity="end"
                 android:textColor="#FFFFFF"
-                tools:ignore="RtlSymmetry" />
+                tools:ignore="RtlSymmetry"/>
 
             <TextView
                 android:id="@+id/last_scan"
@@ -76,7 +76,7 @@
                 android:textSize="17sp"
                 android:layout_weight="1"
                 android:gravity="start"
-                android:textColor="#FFFFFF" />
+                android:textColor="#FFFFFF"/>
 
         </LinearLayout>
 
@@ -103,7 +103,7 @@
                 android:textSize="17sp"
                 android:layout_weight="1"
                 android:gravity="start"
-                android:textColor="#FFFFFF" />
+                android:textColor="#FFFFFF"/>
 
         </LinearLayout>
 
@@ -130,7 +130,7 @@
                 android:textSize="17sp"
                 android:layout_weight="1"
                 android:gravity="start"
-                android:textColor="#FFFFFF" />
+                android:textColor="#FFFFFF"/>
 
         </LinearLayout>
     </LinearLayout>
@@ -142,24 +142,24 @@
         android:paddingTop="2dp"
         android:paddingBottom="2dp"
         android:background="#DF3F51B5"
+        android:gravity="center"
         app:layout_constraintTop_toBottomOf="@id/info_layout">
 
         <TextView
-            android:layout_width="0dp"
+            android:layout_width="160dp"
             android:layout_height="wrap_content"
             android:text="@string/inventory_barcodes_column_title"
-            android:layout_marginEnd="1dp"
+            android:layout_marginEnd="5dp"
             android:textSize="15sp"
             android:textColor="#7FFFFFFF"
-            android:layout_weight="1"
             android:gravity="center"/>
 
         <TextView
-            android:layout_width="100dp"
+            android:layout_width="110dp"
             android:layout_height="wrap_content"
             android:text="@string/inventory_location_column_title"
-            android:layout_marginStart="1dp"
-            android:layout_marginEnd="40dp"
+            android:layout_marginStart="5dp"
+            android:layout_marginEnd="36dp"
             android:textSize="15sp"
             android:textColor="#7FFFFFFF"
             android:gravity="center"/>
@@ -176,7 +176,7 @@
         app:layout_constraintTop_toBottomOf="@+id/inventory_column_labels"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent" />
+        app:layout_constraintBottom_toBottomOf="parent"/>
 
     <Button
         android:id="@+id/random_scan_button"
