--- a/app/src/main/res/layout/preload_location_item_layout.xml
+++ b/app/src/main/res/layout/preload_location_item_layout.xml
@@ -3,64 +3,41 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="48dp"
+    android:layout_height="40dp"
     android:orientation="horizontal"
+    app:cardBackgroundColor="@color/cardview_light_background"
     app:cardUseCompatPadding="true"
     app:cardPreventCornerOverlap="false"
     app:cardCornerRadius="2dp"
     app:cardMaxElevation="1dp"
-    app:cardElevation="1dp" >
+    app:cardElevation="1dp">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="horizontal"
-        android:gravity="center_vertical" >
-
-        <ProgressBar
-            style="@android:style/Widget.DeviceDefault.Light.ProgressBar.Horizontal"
-            android:id="@+id/progress_loading"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:indeterminate="true"
-            android:visibility="gone"/>
+        android:gravity="end">
 
         <TextView
-            android:id="@+id/item_barcode"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginStart="4dp"
-            android:layout_marginRight="4dp"
-            android:layout_marginLeft="4dp"
-            android:layout_marginEnd="4dp"
-            android:layout_weight=".5"
-            android:gravity="center_vertical"
-            android:textSize="15sp" />
-
-        <TextView
-            android:id="@+id/item_location"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginStart="4dp"
-            android:layout_marginLeft="4dp"
-            android:layout_weight=".5"
+            android:id="@+id/location_text_view"
+            android:textColor="#4F000000"
+            android:layout_width="280dp"
+            android:layout_height="30dp"
             android:gravity="center"
-            android:textSize="12sp" />
+            android:layout_gravity="center"/>
 
         <ImageButton
             android:id="@+id/menu_button"
-            android:layout_width="wrap_content"
+            android:layout_width="36dp"
             android:layout_height="wrap_content"
-            android:src="@drawable/ic_more_vert_white_24px"
-            android:paddingLeft="12dp"
-            android:paddingStart="12dp"
-            android:paddingRight="4dp"
-            android:paddingEnd="4dp"
-            android:paddingTop="12dp"
-            android:paddingBottom="12dp"
-            android:layout_gravity="top"
             android:background="@null"
-            android:contentDescription="@string/menu_description" />
+            android:src="@drawable/ic_more_vert_white_24px"
+            android:paddingStart="8dp"
+            android:paddingEnd="4dp"
+            android:paddingTop="8dp"
+            android:paddingBottom="8dp"
+            android:gravity="end"
+            android:contentDescription="@string/menu_description"/>
 
     </LinearLayout>
 </android.support.v7.widget.CardView>
