--- a/app/src/main/res/menu/inventory_item_popup_menu.xml
+++ b/app/src/main/res/menu/inventory_item_popup_menu.xml
@@ -12,6 +12,6 @@
 
     <item
         android:id="@+id/remove_item"
-        android:title="@string/remove_item" />
+        android:title="@string/remove_item_title" />
 
 </menu>
