--- a/app/src/main/res/menu/inventory_menu.xml
+++ b/app/src/main/res/menu/inventory_menu.xml
@@ -8,13 +8,13 @@
     <item
         android:id="@+id/action_save_to_file"
         android:icon="@drawable/ic_save_white_24dp"
-        android:title="@string/save_to_file"
+        android:title="@string/save_to_file_title"
         app:showAsAction="ifRoom" />
 
     <item
         android:id="@+id/cancel_save"
         android:icon="@drawable/ic_clear_white_24dp"
-        android:title="@string/cancel_save"
+        android:title="@string/cancel_save_title"
         android:visible="false"
         app:showAsAction="always" />
 
@@ -25,9 +25,9 @@
         app:showAsAction="never" />
 
     <item
-        android:id="@+id/action_preload"
-        android:title="@string/switch_to_preload"
-        android:visible="false"
-        app:showAsAction="never" />
+        android:id="@+id/action_continuous"
+        android:checkable="true"
+        app:showAsAction="never"
+        android:title="@string/continuous_mode_title"/>
 
 </menu>
