--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <array name="autosize_inventory_location_text_sizes">
+        <item>8</item>
+        <item>9</item>
         <item>10</item>
         <item>11</item>
         <item>12</item>
@@ -17,5 +19,6 @@
         <item>15</item>
         <item>16</item>
         <item>17</item>
+        <item>18</item>
     </array>
 </resources>
