--- a/app/src/main/res/layout/inventory_layout.xml
+++ b/app/src/main/res/layout/inventory_layout.xml
@@ -33,21 +33,21 @@
             android:orientation="horizontal">
 
             <TextView
+                style="@style/Base.TextAppearance.AppCompat.Medium"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:text="@string/current_location_title_string"
                 android:paddingEnd="8dp"
-                android:textSize="17sp"
                 android:layout_weight="1"
                 android:gravity="end"
                 android:textColor="#FFFFFF"
                 tools:ignore="RtlSymmetry"/>
 
             <TextView
+                style="@style/Base.TextAppearance.AppCompat.Medium"
                 android:id="@+id/current_location"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:textSize="17sp"
                 android:layout_weight="1"
                 android:gravity="start"
                 android:textColor="#FFFFFF"/>
@@ -60,21 +60,21 @@
             android:orientation="horizontal">
 
             <TextView
+                style="@style/Base.TextAppearance.AppCompat.Medium"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:text="@string/last_scan_title_string"
                 android:paddingEnd="8dp"
-                android:textSize="17sp"
                 android:layout_weight="1"
                 android:gravity="end"
                 android:textColor="#FFFFFF"
                 tools:ignore="RtlSymmetry"/>
 
             <TextView
+                style="@style/Base.TextAppearance.AppCompat.Medium"
                 android:id="@+id/last_scan"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:textSize="17sp"
                 android:layout_weight="1"
                 android:gravity="start"
                 android:textColor="#FFFFFF"/>
@@ -87,21 +87,21 @@
             android:orientation="horizontal">
 
             <TextView
+                style="@style/Base.TextAppearance.AppCompat.Medium"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:text="@string/total_items_title_string"
                 android:paddingEnd="8dp"
-                android:textSize="17sp"
                 android:layout_weight="1"
                 android:gravity="end"
                 android:textColor="#FFFFFF"
                 tools:ignore="RtlSymmetry"/>
 
             <TextView
+                style="@style/Base.TextAppearance.AppCompat.Medium"
                 android:id="@+id/total_items"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:textSize="17sp"
                 android:layout_weight="1"
                 android:gravity="start"
                 android:textColor="#FFFFFF"/>
@@ -114,21 +114,21 @@
             android:orientation="horizontal">
 
             <TextView
+                style="@style/Base.TextAppearance.AppCompat.Medium"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:text="@string/total_containers_title_string"
                 android:paddingEnd="8dp"
-                android:textSize="17sp"
                 android:layout_weight="1"
                 android:gravity="end"
                 android:textColor="#FFFFFF"
                 tools:ignore="RtlSymmetry"/>
 
             <TextView
+                style="@style/Base.TextAppearance.AppCompat.Medium"
                 android:id="@+id/total_containers"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:textSize="17sp"
                 android:layout_weight="1"
                 android:gravity="start"
                 android:textColor="#FFFFFF"/>
@@ -147,23 +147,23 @@
         app:layout_constraintTop_toBottomOf="@id/info_layout">
 
         <TextView
+            style="@style/Base.TextAppearance.AppCompat.Small"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:text="@string/inventory_barcodes_column_title"
             android:layout_marginEnd="5dp"
-            android:textSize="15sp"
             android:textColor="#7FFFFFFF"
             android:layout_gravity="center"
             android:gravity="center"
             android:layout_weight="1"/>
 
         <TextView
+            style="@style/Base.TextAppearance.AppCompat.Small"
             android:layout_width="100dp"
             android:layout_height="wrap_content"
             android:text="@string/inventory_location_column_title"
             android:layout_marginStart="5dp"
             android:layout_marginEnd="37dp"
-            android:textSize="15sp"
             android:textColor="#7FFFFFFF"
             android:gravity="center"/>
 
