--- a/app/src/main/res/layout/inventory_item_layout.xml
+++ b/app/src/main/res/layout/inventory_item_layout.xml
@@ -4,13 +4,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="36dp"
-    android:orientation="horizontal"
-    app:cardBackgroundColor="@color/cardview_light_background"
-    app:cardUseCompatPadding="true"
-    app:cardPreventCornerOverlap="false"
-    app:cardCornerRadius="2dp"
-    app:cardMaxElevation="1dp"
-    app:cardElevation="1dp">
+    android:orientation="horizontal">
 
     <TextView
         android:id="@+id/barcode_text_view"
