--- a/app/src/main/res/layout/inventory_layout.xml
+++ b/app/src/main/res/layout/inventory_layout.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
+<com.porterlee.standardinventory.SoftKeyboardHandledConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -223,4 +223,4 @@
         android:orientation="horizontal"
         app:layout_constraintGuide_percent="0.35" />
 
-</android.support.constraint.ConstraintLayout>
+</com.porterlee.standardinventory.SoftKeyboardHandledConstraintLayout>
